# key

./: Cargo.toml  README.md
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-approve-own-prs.yml  ci.yml  publish-page.yml  tests.yml
algorithms/: Cargo.toml
book/: ayu-highlight-3fdfc3ac.css  book-a0b12cfe.js  cli.html  control-center.html  features.html  floating.html  hdr.html  highlight-493f70e1.css  index.html  input-modes.html  installation.html  introduction.html  mouse.html  print.html  running.html  screen-sharing.html  searcher-c2a407aa.js  tiling.html  toc-5c257383.js  toc.html  tomorrow-night-4c0ae647.css  troubleshooting.html  window-rules.html  workspaces.html
book/configuration/: environment.html  gpu.html  idle.html  index.html  inputs.html  keymaps.html  misc.html  outputs.html  shortcuts.html  startup.html  status-bar.html  theme.html  xwayland.html
book/css/: print-9e4910d8.css  variables-8adf115d.css
jay-config/: Cargo.toml
jay-config/src/keyboard/: mod.rs
src/utils/: compat.rs
toml-config/: Cargo.toml
toml-config/src/toml/: tests.rs
toml-spec/: Cargo.toml
wire-to-xml/: Cargo.toml
xml-to-wire/: Cargo.toml
