[package]
name = "jay-config"
version = "1.10.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Configuration crate for the Jay compositor"
repository = "https://github.com/mahkoh/jay"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
futures-util = {  version = "0.3.32", features = ["io"] }
uapi = "0.2.13"
thiserror = "2.0.18"
backtrace = "0.3.76"
error_reporter = "1.0.0"
serde_json = "1.0.149"
bstr = { version = "1.12.1", default-features = false, features = ["std"] }
run-on-drop = "1.0.0"
